--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>website</title>
   </head>
 
+  <!-- Header name and navigiation links -->
   <body>
     <header class="header">
       <h1>Hori<span id="seo">seo</span>n</h1>
@@ -29,8 +30,9 @@
 
     <main id="hero"></main>
 
-    <section class="content">
-      <header class="search-engine-optimization">
+    <!-- Section for each category in SEO, ORM, and SMM -->
+    <main class="content">
+      <section class="search-engine-optimization">
         <img
           src="./assets/images/search-engine-optimization.jpg"
           class="float-left"
@@ -43,9 +45,9 @@
           home. Search Engine Optimization (SEO) allows you to increase your
           visibility and find the right customers for your business.
         </p>
-      </header>
+      </section>
 
-      <header class="online-reputation-management">
+      <section class="online-reputation-management">
         <img
           src="./assets/images/online-reputation-management.jpg"
           class="float-right"
@@ -59,9 +61,9 @@
           control over what potential customers see when they search for your
           business.
         </p>
-      </header>
+      </section>
 
-      <header class="social-media-marketing">
+      <section class="social-media-marketing">
         <img
           src="./assets/images/social-media-marketing.jpg"
           class="float-left"
@@ -74,11 +76,12 @@
           to your brand, using analytics to find the right markets and increase
           your lead generation.
         </p>
-      </header>
-    </section>
+      </section>
+    </main>
 
-    <aside class="benefits">
-      <header class="benefit-lead">
+    <!-- Side Section Benefits -->
+    <main class="benefits">
+      <aside class="benefit-lead">
         <h3>Lead Generation</h3>
         <img
           src="./assets/images/lead-generation.png"
@@ -87,9 +90,9 @@
           Inbound strategies for lead generation require less work for your
           business, bringing customers directly to your website.
         </p>
-      </header>
+      </aside>
 
-      <header class="benefit-brand">
+      <aside class="benefit-brand">
         <h3>Brand Awareness</h3>
         <img
           src="./assets/images/brand-awareness.png"
@@ -98,9 +101,9 @@
           Users find your business through paid and organic searches, increasing
           the search ranking and visibility for your business.
         </p>
-      </header>
+      </aside>
 
-      <header class="benefit-cost">
+      <aside class="benefit-cost">
         <h3>Cost Management</h3>
         <img
           src="./assets/images/cost-management.png"
@@ -109,9 +112,10 @@
           As the search ranking for your business increases, your advertising
           costs decrease, and you no longer need to advertise your page.
         </p>
-      </header>
-    </aside>
+      </aside>
+    </main>
 
+    <!-- Footer at end of webpage -->
     <footer class="footer">
       <h2>Made with ❤️️ by Horiseon</h2>
       <p>&copy; 2019 Horiseon Social Solution Services, Inc.</p>
