added title to index.html, updated readme.md, added webpage image

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <title>website</title>
+    <title>Horiseon | SEO | Digital Marketing | Online Reputation Management | Social Media Marketing | Lead Generation</title>
   </head>
 
   <!-- Header name and navigiation links -->
@@ -79,7 +79,7 @@
       </section>
     </main>
 
-    <!-- Side Section Benefits -->
+    <!-- Side Benefits -->
     <main class="benefits">
       <aside class="benefit-lead">
         <h3>Lead Generation</h3>
